src/objects/MX_PyME_Reporte__c.object
<CustomObject>
    <!--<fields>
        <fullName>MX_PYME_Location__c</fullName>
        <formula>IF( 
NOT(ISBLANK( MX_PyME_Visita_Rep__r.Check_In_Geolocation__c  )),  
&apos;https://maps.googleapis.com/maps/api/staticmap?center=&apos; + TEXT( MX_PyME_Visita_Rep__r.Check_In_Geolocation__Latitude__s  ) + &apos;,&apos; + TEXT(MX_PyME_Visita_Rep__r.Check_In_Geolocation__Longitude__s ) + &apos;&amp;markers=&apos; + TEXT(MX_PyME_Visita_Rep__r.Check_In_Geolocation__Latitude__s ) + &apos;,&apos; + TEXT( MX_PyME_Visita_Rep__r.Check_In_Geolocation__Longitude__s ) + &apos;&amp;zoom=16&amp;scale=1&amp;size=550x300&amp;maptype=roadmap&amp;key=&apos; + $Setup.cico__GBL_Google_maps_API_keys__c.cico__Google_static_maps_API_key__c ,  
&apos;Check in pending&apos; 
)</formula>
        <label>MX_PYME_Location</label>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_PYME_Nombre_decisiones__c</fullName>
        <description>Persona que toma las decisiones estratégicas</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de quien toma las decisiones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Relacion_principal_accionista__c</fullName>
        <label>Relación con el principal accionista</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hermano</fullName>
                </value>
                <value>
                    <fullName>Sobrino</fullName>
                </value>
                <value>
                    <fullName>Tío</fullName>
                </value>
                <value>
                    <fullName>Amistad</fullName>
                </value>
                <value>
                    <fullName>Esposa</fullName>
                </value>
                <value>
                    <fullName>Empleado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PYME_Solicitante_Accionista__c</fullName>
        <label>Solicitante / Accionista</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Solicitante</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Accionista</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Actividades_meses_menos_ventas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actividades meses menos ventas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Ano_de_constitucion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Año de constitución</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Antiguedad_en_el_sector__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Antiguedad en el sector</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Capital_contable__c</fullName>
        <label>Capital contable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Cargo_rep__c</fullName>
        <formula>TEXT(MX_PyME_Contacto_Rep__r.Cargo__c)</formula>
        <label>Cargo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Celular__c</fullName>
        <formula>MX_PyME_Contacto_Rep__r.MobilePhone</formula>
        <label>Celular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Ciudad_Poblacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ciudad / Población</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Codigo_postal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Código postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Colonia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Colonia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Como_comenzo_la_empresa__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Como comenzó la empresa?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Con_quien_instalaciones_gravadas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Con quien? (instalaciones gravadas)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Contacto_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto Rep PyME</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reportes PyME</relationshipLabel>
        <relationshipName>Reportes_PyME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Costo_de_ventas__c</fullName>
        <label>% Costo de ventas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Cuales_y_por_que__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Cuales y por que?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Delegacion_Municipio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delegación / Municipio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Departamento_de_cobranza__c</fullName>
        <label>Departamento de cobranza</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Descripcion_actividad_principal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción actividad principal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Descripcion_actividad_secundaria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción actividad secundaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Descripcion_del_proceso__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción del proceso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Diferencias_empresa_competencia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Diferencias empresa competencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <!--<fields>
        <fullName>MX_PyME_Division_o_centro_de_negocios__c</fullName>
        <formula>TEXT(MX_PyME_Visita_Rep__r.Owner:User.Divisi_n__c)</formula>
        <label>División o centro de negocios</label>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_PyME_Domicilio_calle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Domicilio (calle)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Domicilios_en_mas_estados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente tiene domicilios en mas estados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_En_donde_domicilios__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿En donde? (Domicilios mas estados)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Entre_calles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entre calles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Estado__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Estados_republica__c</fullName>
        <label>Estados de la república</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Campeche</fullName>
                </value>
                <value>
                    <fullName>Chiapas</fullName>
                </value>
                <value>
                    <fullName>Chihuahua</fullName>
                </value>
                <value>
                    <fullName>Ciudad de México</fullName>
                </value>
                <value>
                    <fullName>Coahuila de Zaragoza</fullName>
                </value>
                <value>
                    <fullName>Colima</fullName>
                </value>
                <value>
                    <fullName>Durango</fullName>
                </value>
                <value>
                    <fullName>Guanajuato</fullName>
                </value>
                <value>
                    <fullName>Guerrero</fullName>
                </value>
                <value>
                    <fullName>Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Jalisco</fullName>
                </value>
                <value>
                    <fullName>México</fullName>
                </value>
                <value>
                    <fullName>Michoacán de Ocampo</fullName>
                </value>
                <value>
                    <fullName>Morelos</fullName>
                </value>
                <value>
                    <fullName>Nayarit</fullName>
                </value>
                <value>
                    <fullName>Nuevo León</fullName>
                </value>
                <value>
                    <fullName>Oaxaca</fullName>
                </value>
                <value>
                    <fullName>Puebla</fullName>
                </value>
                <value>
                    <fullName>Querétaro</fullName>
                </value>
                <value>
                    <fullName>Quintana Roo</fullName>
                </value>
                <value>
                    <fullName>San Luis Potosí</fullName>
                </value>
                <value>
                    <fullName>Sinaloa</fullName>
                </value>
                <value>
                    <fullName>Sonora</fullName>
                </value>
                <value>
                    <fullName>Tabasco</fullName>
                </value>
                <value>
                    <fullName>Tamaulipas</fullName>
                </value>
                <value>
                    <fullName>Tlaxcala</fullName>
                </value>
                <value>
                    <fullName>Veracruz de Ignacio de la Llave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Explica_Instalacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explica (Instalación)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Fecha_fin_contrato__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha fin de contrato (instalación)</label>
        <type>Date</type>
    </fields>
    <!--<fields>
        <fullName>MX_PyME_Fecha_visita__c</fullName>
        <formula>MX_PyME_Visita_Rep__r.LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha visita</label>
        <type>Date</type>
    </fields> -->
    <fields>
        <fullName>MX_PyME_Flujo_mensual__c</fullName>
        <label>Flujo mensual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Frecuencia_renovacion_inversion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frecuencia renovación , inversión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Gasto_o_costo_mayor__c</fullName>
        <label>Gasto o costo mayor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Ha_cambiado_el_accionariado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Ha cambiado el accionariado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Instalaciones_diferentes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Instalaciones diferentes ofc y opr?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Instalaciones_gravadas_hipoteca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Instalaciones gravadas (hipoteca)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Largo_plazo__c</fullName>
        <label>Largo plazo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Exportación</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Crecimiento de instalaciones</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Nuevos productos y servicios</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Nueva planta</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Diversificación de mercado</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Atracción de nuevos socios</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Compra, sustitución de maquinaria</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Mejora tecnológica</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Eficiencias de costos / gastos</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Renegociación, sustitución de proveedores</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Cierre línea de negocios</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Expansión de puntos de venta</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Desinversión</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Incremento capital</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Mecanismos_para_cobrar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Mecanismos para cobrar?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Monto_de_renta_mensual__c</fullName>
        <label>Monto de renta mensual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_Exterior__c</fullName>
        <label>No. Exterior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_Interior__c</fullName>
        <label>No. Interior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_empleados_admin__c</fullName>
        <label>No. empleados admin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_empleados_operativos__c</fullName>
        <label>No. empleados operativos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_pesonas_para_cobrar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿No pesonas para cobrar?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_puntos_de_venta__c</fullName>
        <label>No. de puntos de venta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_No_total_empleados__c</fullName>
        <formula>MX_PyME_No_empleados_admin__c +  MX_PyME_No_empleados_operativos__c +  No_empleados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. total empleados</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Nombre_del_ejecutivo__c</fullName>
        <formula>MX_PyME_Rep_Cliente__r.Propietario_del_cliente__c</formula>
        <label>Nombre del ejecutivo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Nombre_del_entrevistado__c</fullName>
        <formula>MX_PyME_Contacto_Rep__r.GBL_WF_Nombre_Completo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del entrevistado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Nombre_propietario_instalcion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del propietario(Tipo instalación)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <!-- <fields>
        <fullName>MX_PyME_Nombre_y_firma_de_DirCN__c</fullName>
        <formula>MX_PyME_Visita_Rep__r.Owner:User.Director_de_oficina__r.FirstName  + &apos; &apos; + MX_PyME_Visita_Rep__r.Owner:User.Director_de_oficina__r.LastName</formula>
        <label>Nombre y firma de Dir CN</label>
        <type>Text</type>
    </fields> -->
    <fields>
        <fullName>MX_PyME_Numero_de_cliente_rep__c</fullName>
        <formula>MX_PyME_Rep_Cliente__r.No_de_cliente__c</formula>
        <label>Numero de cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Numero_de_registro__c</fullName>
        <formula>MX_PyME_Rep_Cliente__r.Owner.FederationIdentifier</formula>
        <label>Número de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Obstaculos_del_cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Que obstaculos presenta el cliente?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Personas_en_departamento__c</fullName>
        <label>¿Personas en departamento?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Politica_de_riesgos__c</fullName>
        <label>Política de riesgos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Aumentar</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mantener</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Reducir</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Por_que_Inst_diferentes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Por que? (Inst diferentes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Por_que_domicilios_estados__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Por qué? (domicilios estados)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Por_que_ventas_constantes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Por qué? (ventas constantes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Presencia__c</fullName>
        <label>Presencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Local</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Estatal</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Regional</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Nacional</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Internacional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Principal_fuente_financiamiento__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Principal fuente de financiamiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Productos_estrella__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Productos estrella</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Que_se_comercializa__c</fullName>
        <label>Qué se comercializa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Alimentos</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Refacciones</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Art. de consumo</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Maquinaria y herramientas</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Razon_social_rep__c</fullName>
        <formula>MX_PyME_Rep_Cliente__r.Name</formula>
        <label>Razón social</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Rep_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Rep PyME</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reportes PyME</relationshipLabel>
        <relationshipName>Reportes_PyME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Se_le_vende_a__c</fullName>
        <label>Se le vende a</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mayoristas</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Minoristas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Sector_rep__c</fullName>
        <label>Sector rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Servicios</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Manufactura / Industria</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Comercio</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_SitioWeb__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redes sociales/Sitio web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Telefono_fijo__c</fullName>
        <formula>MX_PyME_Contacto_Rep__r.Phone</formula>
        <label>Telefono fijo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_de_administracion__c</fullName>
        <label>Tipo de administración</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Familiar</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Consejo administrativo</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Administrador único</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Profesional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_de_domicilio__c</fullName>
        <label>Tipo de domicilio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Sucursal</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Bodega</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Fiscal</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Oficina administrativa</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Fábrica (operativo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_de_instalacion__c</fullName>
        <label>Tipo de instalación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Propias</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Rentadas</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_de_zona__c</fullName>
        <label>Tipo de zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Urbana</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Semiurbana</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Industrial</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Rural</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_industria_Sector_manInd__c</fullName>
        <label>Tipo industria (Sector man/ind)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Agrícola / textil / minerales / electrónica</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Alimentos y bebidas</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Maquinaria</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Tipo_servicio_sectorServ__c</fullName>
        <label>TIPO SERVICIO (Sector servicios)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Profesionales</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Restaurantes</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Mantenimiento</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Total_gasto_operativo__c</fullName>
        <label>Total del gasto operativo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Uso_del_inmueble__c</fullName>
        <label>Uso del inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Industrial</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Comercial</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Habitacional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_PyME_Utilidad_operativa__c</fullName>
        <label>% Utilidad operativa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_Ventas_ingresos_anuales__c</fullName>
        <label>Ventas / ingresos anuales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <!--<fields>
        <fullName>MX_PyME_Visita_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visita Rep PyME</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Reportes PyME</relationshipLabel>
        <relationshipName>Reportes_PyME</relationshipName>
        <type>Lookup</type>
    </fields> -->
    <fields>
        <fullName>MX_PyME_e_mail__c</fullName>
        <formula>MX_PyME_Contacto_Rep__r.Email</formula>
        <label>e-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_inventarios__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Cuánto tiempo duran los inventarios?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyME_ventas_actividad_principal__c</fullName>
        <label>% ventas actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_PyME_ventas_actividad_secundaria__c</fullName>
        <label>% ventas actividad secundaria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>